Update dependencies and bump version.